{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 56,
  "lineage": "18ab7312-a822-6e93-aa79-b124ccdfa1e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051dc1a12dc7eab81",
            "arn": "arn:aws:ec2:us-east-1:472570941384:instance/i-0c93d7145b80e730e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "check-place-instance-profile",
            "id": "i-0c93d7145b80e730e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-073cc917066cf92f8"
              }
            ],
            "primary_network_interface_id": "eni-073cc917066cf92f8",
            "private_dns": "ip-10-0-1-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-54-210-217-155.compute-1.amazonaws.com",
            "public_ip": "54.210.217.155",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ea3094006740d38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6b0a19b8dbce1aa",
            "tags": {
              "Name": "check-place-backend",
              "Project": "check-place"
            },
            "tags_all": {
              "Name": "check-place-backend",
              "Project": "check-place"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a6365711597fe7d"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "472570941384",
            "id": "i-0c93d7145b80e730e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_key_pair.deployer",
            "aws_security_group.app_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ssm_parameter.amazon_linux_2_arm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472570941384:internet-gateway/igw-012c7afb2bbd5f121",
            "id": "igw-012c7afb2bbd5f121",
            "owner_id": "472570941384",
            "region": "us-east-1",
            "tags": {
              "Name": "check-place-igw",
              "Project": "check-place"
            },
            "tags_all": {
              "Name": "check-place-igw",
              "Project": "check-place"
            },
            "vpc_id": "vpc-08ac438a5e5ea7cf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "472570941384",
            "id": "igw-012c7afb2bbd5f121",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472570941384:route-table/rtb-0ca238a86ac962c4c",
            "id": "rtb-0ca238a86ac962c4c",
            "owner_id": "472570941384",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012c7afb2bbd5f121",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "check-place-public-rt",
              "Project": "check-place"
            },
            "tags_all": {
              "Name": "check-place-public-rt",
              "Project": "check-place"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ac438a5e5ea7cf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "472570941384",
            "id": "rtb-0ca238a86ac962c4c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a3c108843abf1d8",
            "region": "us-east-1",
            "route_table_id": "rtb-0ca238a86ac962c4c",
            "subnet_id": "subnet-0b6b0a19b8dbce1aa"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "472570941384",
            "id": "rtbassoc-00a3c108843abf1d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472570941384:security-group/sg-01a6365711597fe7d",
            "description": "Allow app ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a6365711597fe7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              }
            ],
            "name": "check-place-sg",
            "name_prefix": "",
            "owner_id": "472570941384",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "check-place-sg",
              "Project": "check-place"
            },
            "tags_all": {
              "Name": "check-place-sg",
              "Project": "check-place"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ac438a5e5ea7cf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "472570941384",
            "id": "sg-01a6365711597fe7d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472570941384:subnet/subnet-0b6b0a19b8dbce1aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6b0a19b8dbce1aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "472570941384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "check-place-public-subnet",
              "Project": "check-place"
            },
            "tags_all": {
              "Name": "check-place-public-subnet",
              "Project": "check-place"
            },
            "vpc_id": "vpc-08ac438a5e5ea7cf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "472570941384",
            "id": "subnet-0b6b0a19b8dbce1aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472570941384:vpc/vpc-08ac438a5e5ea7cf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02282d53de1ea321b",
            "default_route_table_id": "rtb-0a3b98e93b9b3d1c1",
            "default_security_group_id": "sg-0c53f1ced1f30d156",
            "dhcp_options_id": "dopt-9d7795e7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ac438a5e5ea7cf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3b98e93b9b3d1c1",
            "owner_id": "472570941384",
            "region": "us-east-1",
            "tags": {
              "Name": "check-place-vpc",
              "Project": "check-place"
            },
            "tags_all": {
              "Name": "check-place-vpc",
              "Project": "check-place"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "472570941384",
            "id": "vpc-08ac438a5e5ea7cf9",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}